--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <div class="main">
+        <div class="bg">     
+
         <div class="header flex spc-btwn">
             <div class="left">
                 <h1>ICC WORLD CUP 2011</h1>
@@ -22,7 +24,7 @@
         <div class="table">
             <div class="t-head flex spc-btwn">
                 <p class="flex">India Innings</p>
-                <p>277-4 (48.2)</p>
+                <p class="end">277-4 (48.2)</p>
             </div>
             <div class="row1 flex spc-btwn">
                 <div class="left flex">
@@ -161,6 +163,7 @@
             </div>
         </div>
         <footer>Made By SAK🖤</footer>
+    </div>
     </div>
 </body>
 </html>
