--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <p class="end">277-4 (48.2)</p>
             </div>
             <div class="row1 flex spc-btwn">
-                <div class="left flex">
+                <div class="c flex">
                     <p>Batsman</p>
                 </div>
                 <div class="right flex flex spc-btwn">
@@ -123,7 +123,7 @@
                 <img class="none" src="https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/front-end-web-development/cricpro-yuvraj.png" alt="">
             </div>
             <div class="row8 flex spc-btwn">
-                <div class="left flex">
+                <div class="c flex">
                     <p>Extras</p>
                 </div>
                 <div class="right flex">
@@ -131,7 +131,7 @@
                 </div>
             </div>
             <div class="row9 flex spc-btwn">
-                <div class="left flex">
+                <div class="c flex">
                     <p>Total</p>
                 </div>
                 <div class="right flex">
